Apps-afcd/afcd-svc-lb-metalLB.yaml
apiVersion: v1
kind: Service
metadata:
  name: afcd-mtllb
spec:
  ports:
  - port: 1234 
    protocol: TCP
    targetPort: 8080
  selector:
    app: afcd-app
  type: LoadBalancer
