Apps-afcd/afcd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-afcd
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: afcd-app
