Apps-afcd/afcd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: app-afcd
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: app-afcd
